First implementation of MediaView
No test data to test with yet