@@ -1,25 +1,29 @@
 package com.hejagam;
 
+import androidx.annotation.NonNull;
+
 import com.facebook.react.ReactPackage;
 import com.facebook.react.bridge.NativeModule;
 import com.facebook.react.bridge.ReactApplicationContext;
 import com.facebook.react.uimanager.ViewManager;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class RNAdManagerPackage implements ReactPackage {
+    @NonNull
     @Override
-    public List<NativeModule> createNativeModules(ReactApplicationContext reactContext) {
-        return Arrays.asList(
-            new RNAdManagerNativeManager(reactContext)
+    public List<NativeModule> createNativeModules(@NonNull ReactApplicationContext reactContext) {
+        return List.of(
+                new RNAdManagerNativeManager(reactContext)
         );
     }
 
+    @NonNull
     @Override
-    public List<ViewManager> createViewManagers(ReactApplicationContext reactContext) {
-        return Arrays.asList(
-            new RNAdManagerNativeViewManager(reactContext)
+    public List<ViewManager> createViewManagers(@NonNull ReactApplicationContext reactContext) {
+        return List.of(
+                new RNAdManagerNativeViewManager(reactContext),
+                new RNAdManagerMediaViewManager(reactContext)
         );
     }
 }
